Reorganized and cleaned up dependencies after merging repos. Removed Google Guava and performed necessary refactorings.